--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <button id="enterFullscreenBtn">Entra in modalità schermo intero</button>
-  <iframe id="webview" src="https://www.quizpatenteonline.it/quiz-patente-b" frameborder="0" allowfullscreen></iframe>
+  <iframe id="webview" src="https://www.quizpatente.it/quiz-patente-b" frameborder="0" allowfullscreen></iframe>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       const webview = document.getElementById("webview");
